ASSERTION FAILED: freeSpace >= 0 in WebCore::RenderGrid::computeTrackSizesForDirection https://bugs.webkit.org/show_bug.cgi?id=151254

Reviewed by Darin Adler.

Source/WebCore:

When in quirks mode, abnormally huge margins could lead to
negative computations of available logical sizes. We could add
an !document.inQuirksMode() check in the assertion but since
negative freeSpace values are valid (i.e. the condition is not
really part of the contract and everything will work as
expected) I've decided to simply remove it.

Test: fast/css-grid-layout/grid-quirks-mode-huge-margin-crash.html

* rendering/RenderGrid.cpp:
(WebCore::RenderGrid::computeTrackSizesForDirection): Deleted.

LayoutTests:

* fast/css-grid-layout/grid-quirks-mode-huge-margin-crash-expected.txt: Added.
* fast/css-grid-layout/grid-quirks-mode-huge-margin-crash.html: Added.

Canonical link: https://commits.webkit.org/169702@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@192741 268f45cc-cd09-0410-ab3c-d52691b4dbfc